--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,5 @@
 .header {
-  width: calc(100% - 48px * 2);
-  height: 52px;
+  max-width: calc(100% - 48px * 2);
   padding-top: 28px;
   display: flex;
   flex-direction: row;
@@ -11,18 +10,23 @@
 
 @media (max-width: 1024px) {
   .header {
-    width: calc(100% - ((100vw - 768px) / (1024 - 768) * (48 - 24) + 24px) * 2);
+    max-width: calc(
+      100% - ((100vw - 768px) / (1024 - 768) * (48 - 24) + 24px) * 2
+    );
   }
 }
 
 @media (max-width: 768px) {
   .header {
-    width: calc(100% - ((100vw - 320px) / (768 - 320) * (24 - 16) + 16px) * 2);
+    max-width: calc(
+      100% - ((100vw - 320px) / (768 - 320) * (24 - 16) + 16px) * 2
+    );
   }
 }
 
 @media (max-width: 320px) {
   .header {
-    width: calc(100% - 32px);
+    padding-top: 16px;
+    max-width: calc(100% - 32px);
   }
 }
