--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,14 +1,31 @@
 .cover__overlay {
+  display: flex;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: #2a2c2f;
-  opacity: 0.3;
-  transition: opacity 0.25s ease-in-out;
+  text-decoration: none;
+
+  justify-content: center;
+  align-items: center;
 }
 
-.cover__overlay:hover {
+.cover__overlay:hover::before {
+  opacity: 0.3;
+}
+
+.cover__overlay::before {
+  content: "";
+  background-image: url(../../../images/cover-trains.jpg);
+  background-position: center center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
   opacity: 0.8;
+  transition: opacity 0.25s ease-in-out;
 }
