--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -11,6 +11,7 @@
   padding-bottom: 5px;
   transition: opacity 0.2s ease-in-out;
   cursor: pointer;
+  text-transform: capitalize;
 }
 
 .header__lang-link:first-of-type {
@@ -25,15 +26,7 @@
   opacity: 0.7;
 }
 
-@media (min-width: 1024px) {
-  .header__lang-link {
-    font-weight: 600;
-    -webkit-text-stroke: 1px black;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.657);
-  }
-}
-
-@media (max-width: 768px) and (min-width: 320px) {
+@media (max-width: 768px) {
   .header__lang-link {
     font-size: calc((100vw - 320px) / (768 - 320) * (24 - 18) + 18px);
   }
