--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,4 +1,9 @@
 .header__logo {
-  width: 176px;
-  height: 52px;
+  max-width: 176px;
+}
+
+@media (max-width: 768px) {
+  .header__logo {
+    max-width: calc((100vw - 320px) / (768 - 320) * (176 - 142) + 142px);
+  }
 }
