--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,9 +1,30 @@
 .intro__title {
-  font-family: "Inter";
   font-style: normal;
   font-weight: 900;
   font-size: 54px;
   line-height: 58px;
   color: #ffffff;
   margin: 0;
+}
+
+@media (max-width: 768px) {
+  .intro__title {
+    padding-top: 88px;
+  }
+}
+
+@media (max-width: 540px) {
+  .intro__title {
+    font-size: 10vw;
+    line-height: 11vw;
+  }
+}
+
+@media (max-width: 320px) {
+  .intro__title {
+    padding-top: 64px;
+    font-size: 32px;
+    line-height: 35px;
+    max-width: 87%;
+  }
 }
