--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,12 +1,12 @@
 .lead {
-  width: calc(100% - 148px * 2);
+  max-width: calc(100% - 148px * 2);
   margin: 0 auto;
-  padding-top: 42px;
+  padding-top: 56px;
 }
 
 @media (max-width: 1280px) {
   .lead {
-    width: calc(
+    max-width: calc(
       100% - ((100vw - 1024px) / (1280 - 1024) * (148 - 48) + 48px) * 2
     );
   }
@@ -14,12 +14,19 @@
 
 @media (max-width: 1024px) {
   .lead {
-    width: calc(100% - ((100vw - 768px) / (1024 - 768) * 48 * 2));
+    padding-top: 48px;
+    max-width: calc(100% - ((100vw - 768px) / (1024 - 768) * 48 * 2));
   }
 }
 
 @media (max-width: 768px) {
   .lead {
-    width: 100%;
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 320px) {
+  .lead {
+    max-width: 100%;
   }
 }
