--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -7,14 +7,27 @@
 
 @media (max-width: 1280px) {
   .cover {
-    font-size: calc((100vw - 768px) / (1024 - 768) * (72 - 42) + 42px);
     width: calc(100% - ((100vw - 1024px) / (1280 - 1024) * 48 * 2));
-    min-height: 62.5vw;
+    min-height: calc((100vw - 1024px) / (1280 - 1024) * (740 - 640) + 640px);
   }
 }
 
 @media (max-width: 1024px) {
   .cover {
     width: 100%;
+    margin: 92px auto 0;
+    min-height: 62.5vw;
+  }
+}
+
+@media (max-width: 768px) {
+  .cover {
+    margin: calc((100vw - 320px) / (768 - 320) * (90 - 66) + 66px) auto 0;
+  }
+}
+
+@media (max-width: 320px) {
+  .cover {
+    margin: 66px auto 0;
   }
 }
