--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -3,7 +3,7 @@
   margin: 0 auto;
   font-weight: 900;
   font-size: 96px;
-  line-height: 1.04;
+  line-height: 100px;
   text-align: center;
   color: #ffffff;
 }
@@ -11,5 +11,6 @@
 @media (max-width: 768px) {
   .lead__title {
     font-size: calc((100vw - 320px) / (768 - 320) * (96 - 40) + 40px);
+    line-height: calc((100vw - 320px) / (768 - 320) * (100 - 44) + 44px);
   }
 }
