--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,3 +1,18 @@
 .place__image {
   max-width: 100%;
 }
+
+@media (max-width: 768px) {
+  .place__image {
+    width: calc(100% + ((100vw - 320px) / (768 - 320) * (0 - 16) + 16px) * 2);
+    max-width: 100vw;
+    margin: 0 calc(0px - ((100vw - 320px) / (768 - 320) * (0 - 16) + 16px));
+  }
+}
+
+@media (max-width: 320px) {
+  .place__image {
+    width: calc(100% + 16px * 2);
+    margin: 0 -16px;
+  }
+}
