--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -2,7 +2,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
-  line-height: 162.9%;
+  line-height: 1.63em;
   color: #ffffff;
   margin: 0;
   align-self: start;
@@ -21,5 +21,16 @@
 @media (max-width: 768px) {
   .place__paragraph {
     font-size: 16px;
+    line-height: 1.62em;
+  }
+}
+
+.place__br {
+  display: none;
+}
+
+@media (max-width: 330px) {
+  .place__br_baikal {
+    display: block;
   }
 }
