--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -2,7 +2,7 @@
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
-  line-height: 1.1;
+  line-height: 76px;
   color: #ffffff;
   margin: 0;
   align-self: end;
@@ -17,6 +17,7 @@
 
 @media (max-width: 768px) {
   .place__title {
+    line-height: 1.094;
     font-size: calc((100vw - 320px) / (768 - 320) * (42 - 32) + 32px);
   }
 }
